--- a/complete-node-bootcamp-master/4-natours/starter/config.env
+++ b/complete-node-bootcamp-master/4-natours/starter/config.env
@@ -4,3 +4,8 @@ DATABASE=mongodb+srv://akkologlu:<PASSWORD>@cluster0.u8lq8gj.mongodb.net/natours
 DATABASE_PASSWORD=wUj7ogOLtiTsTZIS
 JWT_SECRET=benim-ultra-guvenli-ve-cok-uzun-sirrim
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=dcdfd7da18e405
+EMAIL_PASSWORD=363397c6c0857e
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
