--- a/complete-node-bootcamp-master/4-natours/starter/.gitignore
+++ b/complete-node-bootcamp-master/4-natours/starter/.gitignore
@@ -1,1 +1,21 @@
-config.env
+# Logs
+logs
+*.log
+
+# Dependency directories
+node_modules/
+
+# Environment variables
+.env
+
+# Built output
+dist/
+build/
+
+# IDE files
+.vscode/
+.idea/
+
+# Miscellaneous
+.DS_Store
+Thumbs.db
